@@ -4050,11 +4050,6 @@ HRESULT WebView::notifyPreferencesChanged(IWebNotification* notification)
         return hr;
     settings->setJavaScriptEnabled(!!enabled);
 
-    hr = preferences->isWebSecurityEnabled(&enabled);
-    if (FAILED(hr))
-        return hr;
-    settings->setWebSecurityEnabled(!!enabled);
-
     hr = preferences->javaScriptCanOpenWindowsAutomatically(&enabled);
     if (FAILED(hr))
         return hr;
@@ -4208,6 +4203,11 @@ HRESULT WebView::notifyPreferencesChanged(IWebNotification* notification)
     if (FAILED(hr))
         return hr;
     settings->setLocalStorageEnabled(enabled);
+
+    hr = prefsPrivate->isWebSecurityEnabled(&enabled);
+    if (FAILED(hr))
+        return hr;
+    settings->setWebSecurityEnabled(!!enabled);
 
 #if USE(SAFARI_THEME)
     hr = prefsPrivate->shouldPaintNativeControls(&enabled);
